- fixes style issue for v-button icon align right

--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-button.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-button.scss
@@ -128,7 +128,7 @@ body:not(.v-touch) .v-button:not(.v-disabled).borderless.custom:hover {
     padding-top: 5px;
     padding-bottom: 5px;
   }
-  :not(.floating-action):not(.icon-only).v-button .v-icon {
+  :not(.icon-align-right):not(.floating-action):not(.icon-only).v-button .v-icon {
     margin-left: -10px;
     padding: 0px 4px;
   }
@@ -259,10 +259,12 @@ body:not(.v-touch) .v-button:not(.v-disabled).borderless.custom:hover {
   }
   .v-button-icon-align-right .v-icon {
     float: right;
-    padding-left: 8px;
   }
   .v-button-icon-align-right [class*="wrap"] {
     display: inline-block;
-    padding-left: 5px;
+  }
+  .icon-align-right .v-button-caption {
+    margin-left: 0px;
+    margin-right: 10px;
   }
 }
